--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
       <div class="menu">
         <ul>
           <li><a href="#">home</a></li>
-          <li><a href="#">about</a></li>
-          <li><a href="#">portfolio</a></li>
-          <li><a href="#">services</a></li>
-          <li><a href="#">journal</a></li>
-          <li><a href="#">contact</a></li>
+          <li><a href="#about">about</a></li>
+          <li><a href="#portfolio">portfolio</a></li>
+          <li><a href="#services">services</a></li>
+          <li><a href="#journal">journal</a></li>
+          <li><a href="#contact">contact</a></li>
         </ul>
       </div>
     </div>
