--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <li><a href="#">home</a></li>
           <li><a href="#about">about</a></li>
           <li><a href="#portfolio">portfolio</a></li>
-          <li><a href="#services">services</a></li>
+          <li><a href="#service">services</a></li>
           <li><a href="#journal">journal</a></li>
           <li><a href="#contact">contact</a></li>
         </ul>
